# shvcall-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: auto-reviewer.yml  check-version-bump.yml  publish.yml  rust.yml
src/: lib.rs  main.rs  serial.rs
