[package]
name = "shvcall"
version = "3.6.1"
edition = "2021"

[[bin]]
name = "shvcall"

[features]
readline = ["dep:crossterm", "dep:rustyline-async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shvproto = { git = "https://github.com/silicon-heaven/libshvproto-rs.git", branch = "master" }
shvrpc = { git = "https://github.com/silicon-heaven/libshvrpc-rs.git", branch = "master" }
futures = "0.3.29"
smol = "2"
log = "0.4.20"
simple_logger = { version = "5.0.0", features = ["stderr"] }
clap = { version = "4.4.12", features = ["derive"] }
rustyline-async = { version = "0.4.1", optional = true }
crossterm = { version = "0.28", optional = true }
url = "2.4.1"
futures-time = "3.0.0"
async-channel = "2.3.1"

# For local development
#[patch."https://github.com/silicon-heaven/libshvproto-rs"]
#shvproto = { path = "../libshvproto-rs" }
#[patch."https://github.com/silicon-heaven/libshvrpc-rs"]
#shvrpc = { path = "../libshvrpc-rs" }
