[package]
name = "shvcall"
description = "CLI utility to invoke remote SHV RPC calls"
license = "MIT"
repository = "https://github.com/silicon-heaven/shvcall-rs"
version = "3.9.11"
edition = "2024"

[[bin]]
name = "shvcall"

[features]
readline = ["dep:crossterm", "dep:rustyline-async"]
serial = ["dep:serialport"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shvproto = "3.6.28"
shvrpc = "7.1.8"
futures = "0.3.29"
smol = "2"
log = "0.4.20"
simple_logger = { version = "5.0.0", features = ["stderr"] }
clap = { version = "4.5.54", features = ["derive"] }
rustyline-async = { version = "0.4.1", optional = true }
crossterm = { version = "0.29", optional = true }
url = "2.4.1"
futures-time = "3.0.0"
async-channel = "2.3.1"
serialport = { version = "4.7.1", optional = true }

# For local development
#[patch."https://github.com/silicon-heaven/libshvproto-rs"]
#shvproto = { path = "../libshvproto-rs" }
# [patch."https://github.com/silicon-heaven/libshvrpc-rs"]
# shvrpc = { path = "../libshvrpc-rs" }
