[package]
name = "shvcall"
description = "CLI utility to invoke remote SHV RPC calls"
license = "MIT"
repository = "https://github.com/silicon-heaven/shvcall-rs"
version = "3.9.16"
edition = "2024"

[[bin]]
name = "shvcall"

[features]
readline = ["dep:crossterm", "dep:rustyline-async"]
serial = ["dep:serialport"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shvproto = "6.0.1"
shvrpc = "11.0.0"
futures = "0.3.29"
smol = "2"
log = "0.4.20"
simple_logger = { version = "5.0.0", features = ["stderr"] }
clap = { version = "4.5.57", features = ["derive"] }
rustyline-async = { version = "0.4.1", optional = true }
crossterm = { version = "0.29", optional = true }
url = "2.5.8"
futures-time = "3.0.0"
futures-rustls = "0.26.0"
rustls-pemfile = "2.2.0"
rustls-platform-verifier = "0.6.1"
async-channel = "2.3.1"
serialport = { version = "4.7.1", optional = true }

# For local development
#[patch."https://github.com/silicon-heaven/libshvproto-rs"]
#shvproto = { path = "../libshvproto-rs" }
# [patch."https://github.com/silicon-heaven/libshvrpc-rs"]
# shvrpc = { path = "../libshvrpc-rs" }
